kubernetes/example/pod-example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortune
  # label 추가
  labels:
    creation_method: manual
    env: prod
  # 주석 추가
  annotations:
    my-key: |
      {"test":"최대 256KB"}
spec:
  # node label 지정
  nodeSelector:
    gpu: "true"
  containers:
    - image: luksa/fortune
      name: html-generator
      volumeMounts:
      - name: html
        mountPath: /var/htdocs
    - image: nginx:alpine
      name: web-server
      volumeMounts:
      - name: html
        mountPath: /usr/share/nginx/html
        readOnly: true
      ports:
        - containerPort: 80
          protocol: TCP
  volumes:
  - name: html
    # emptyDir: {}
    # 디스크 대신 메모리에 있는 tmpfs 파일 시스템을 사용
    emptyDir:
      medium: Memory
