kubernetes/example/service-headless.yml
apiVersion: v1
kind: Service
metadata:
  name: kubia-headless
spec:
  clusterIP: None # headless
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia
