kubernetes/example/service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30123 # 지정하지 않을 경우 임의의 포트
  selector:
    app: kubia
