kubernetes/example/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  sessionAffinity: None # ClientIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: kubia
